# fly-across

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
Assets/: README.md
Docs/: README.md
Game/: README.md
Source/: CMakeLists.txt  README.md
Source/debugging/: logger.cpp  logger.h  logging.json
Source/eventmanager/: eventmanager.h
Source/flyacross/: CMakeLists.txt  flyacross.cpp  flyacross.h  main.cpp
Source/game/: CMakeLists.txt  README.md  game.cpp  game.h  gameoption.h  main.cpp
Source/gamelogic/: gamelogic.h
Source/init/: CMakeLists.txt  README.md  game.cpp  game.h  gameoption.cpp  gameoption.h  initializer.cpp  initializer.h  logger.cpp  logger.h  luamanager.h  main.cpp  rescache.h  vector2d.cpp  vector2d.h
Source/lifetime/mainloop/: main.cpp
Source/luamanager/: luamanager.cpp  luamanager.h
Source/mainloop/: initializer.cpp  initializer.h
Source/rescache/: rescache.cpp  rescache.h
Source/third/: README.md
Source/utils/: vector2d.cpp
Temp/: README.md
Test/: README.md
